# soul-symphony-ling-edition

./: .gitattributes  .gitignore  Cargo.toml  README_TH.md  RENDERING_UPGRADES.md  build.rs  cube_play.ling  main.ling  net.cfg  options.cfg  play_soundtrack.ling  rtest.ling  rules.md  scene_graph.txt  test_cutscene.ling  thai.ling  หลัก.ling
blend/: boss.blend
font/: ArcadeJA.ling  ArcadeKO.ling  ArcadeTH.ling  ArcadeZH.ling  Chinese.ling  Daemon3D.ling  English.ling  English3D.ling  Japanese.ling  Korean.ling  MenuJA.ling  MenuKO.ling  MenuTH.ling  MenuZH.ling  SS2EN.ling  SS2JA.ling  SS2KO.ling  SS2TH.ling  SS2ZH.ling  Thai.ling
game/: P2P_SYNC_README.md  POST_LEVEL1_INTEGRATION.txt  arcade.ling  arena.ling  arena_model.ling  audio.ling  bonus_level.ling  boss.ling  color.ling  companions.ling  grid.ling  king.lmesh  king_lod.ling  king_model.ling  lattice.ling  level.ling  main.ling  maze.ling  monster.ling  online_world.ling  p2p_sync.ling  play.ling  proc_gen_level.ling  queen.lmesh  queen_lod.ling  queen_model.ling  render_optimized.ling  shape.ling  title.ling  title_midi.ling  title_midi.ling.bak  สนามรบ.ling  เขาวงกต.ling
instruments/: chime.ling  fanfare.ling  gamelan.ling  gong.ling  yinyang.ling
model/: jack.jlb.glb
music/: Antartica.mid  Antartica_data.ling  Bassline.mid  Bassline_data.ling  Battle.mid  Battle_data.ling  Canopy.mid  Canopy_data.ling  ChipTune.mid  ChipTune_data.ling  Chords.mid  Chords_data.ling  Death.mid  Death_data.ling  Festival.mid  Festival_data.ling  HealthyHell.mid  HealthyHell_data.ling  Lift.mid  Lift_data.ling  Main_Menu.mid  Main_Menu_data.ling  MoonTime.mid  MoonTime_data.ling  Peace Love Happiness.mid  PeaceLoveHappiness_data.ling  Psyon.mid  Psyon_data.ling  Purika.mid  Purika_data.ling  Soul Symphony.ling  Soul Symphony.mid  SoulSymphony_data.ling  Swing.mid  Swing_data.ling  Theme of the Maching Meadow.mid  antartica_data.ling  songs.ling  soulsong.ling  เพลงชื่อเรื่อง.ling
recordings/: frame_00000.ppm  frame_00001.ppm
src/: main.rs
tools/: glb2ling.py
(+158 files in other folders)
