[package]
name = "soul-symphony-ling"
version = "0.1.0"
edition = "2021"
authors = ["Ling Lin <taellinglin@gmail.com>"]
description = "Soul Symphony — Ling Edition. A spiritual 3D adventure in the soul realm, powered by ling-lang 2030."

[[bin]]
name = "soul-symphony-ling"
path = "src/main.rs"

[dependencies]
ling-lang = { path = "C:/Users/User/Programs/ling" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
