[package]
name = "soul-symphony-ling"
version = "0.1.0"
edition = "2021"
authors = ["Ling Lin <taellinglin@gmail.com>"]
description = "Soul Symphony — Ling Edition. A spiritual 3D adventure in the soul realm, powered by ling-lang 2030."
build = "build.rs"

# Asset folders bundled next to the built binary (target/<profile>/) by build.rs
# so the .exe runs standalone. Add folders here as the game needs them.
# `files` are copied only if absent at the destination (so runtime-saved
# configs like options.cfg / net.cfg / saves.dat are not clobbered on rebuild).
[package.metadata.assets]
dirs = ["game", "font", "music"]
files = ["options.cfg", "net.cfg", "progress.dat"]

[[bin]]
name = "soul-symphony-ling"
path = "src/main.rs"

[dependencies]
ling-lang = { git = "https://github.com/taellinglin/ling" }

# Build against the local engine clone so game-driven engine features
# (e.g. right/middle mouse builtins) are available. Keep ../ling present.
[patch."https://github.com/taellinglin/ling"]
ling-lang = { path = "../ling" }

# Exe icon (assets/ling.ico — gold ลิง + 灵) embedded by build.rs on Windows,
# so `lingfu build` / `cargo build` produce a branded soul-symphony-ling.exe.
[package.metadata.icon]
path = "assets/ling.ico"

[build-dependencies]
winresource = "0.1"




[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[lib]
crate-type = ["cdylib", "rlib"]